Sett opp minimum for å kjøre appen lokalt og oppdater dokumentasjon